// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Collection form test should display successfull submission screen 1`] = `
<StandardPage
  title="Add a missing collection"
>
  <WithStyles(Grid)
    container={true}
    spacing={24}
  >
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <StandardCard
        title="Your thesis has been deposited"
      >
        <WithStyles(Typography)>
          You will receive an email confirming your thesis deposit shortly.
        </WithStyles(Typography)>
      </StandardCard>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
  <WithStyles(Grid)
    container={true}
    spacing={16}
  >
    <WithStyles(Grid)
      item={true}
      xs={true}
    />
    <WithStyles(Grid)
      item={true}
    >
      <WithStyles(Button)
        color="primary"
        fullWidth={true}
        onClick={[Function]}
        variant="raised"
      >
        Return to the Graduate School website
      </WithStyles(Button)>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</StandardPage>
`;

exports[`Collection form test should render form 1`] = `
<StandardPage
  title="Add a missing collection"
>
  <form>
    <NavigationDialogBox
      when={true}
    />
    <ConfirmDialogBox
      hideCancelButton={false}
      locale={
        Object {
          "cancelButtonLabel": "No",
          "confirmButtonLabel": "Yes",
          "confirmationMessage": "Are you sure?",
          "confirmationTitle": "Confirmation",
        }
      }
      onAction={[MockFunction]}
      onRef={[Function]}
    />
    <WithStyles(Grid)
      container={true}
      spacing={24}
    >
      <WithStyles(Grid)
        item={true}
        xs={12}
      >
        <StandardCard
          title="Collection information"
        >
          <WithStyles(Grid)
            container={true}
            spacing={24}
          >
            <WithStyles(Grid)
              item={true}
              xs={12}
            >
              <Field
                component={[Function]}
                disabled={false}
                locale={
                  Object {
                    "label": "Member of community",
                  }
                }
                multiple={true}
                name="community"
                required={true}
                validate={
                  Array [
                    [Function],
                  ]
                }
              />
            </WithStyles(Grid)>
          </WithStyles(Grid)>
        </StandardCard>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      container={true}
      spacing={16}
    >
      <WithStyles(Grid)
        item={true}
        sm={true}
        xs={false}
      />
      <WithStyles(Grid)
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(Button)
          disabled={false}
          fullWidth={true}
          onClick={[Function]}
          variant="contained"
        >
          Cancel
        </WithStyles(Button)>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(Button)
          color="primary"
          fullWidth={true}
          onClick={[Function]}
          variant="contained"
        >
          Deposit your thesis
        </WithStyles(Button)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
  </form>
</StandardPage>
`;
